--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
 </head>
 <body>
     hola mundo
-<<<<<<< HEAD
-    fak 1
-    lmao lmao
-=======
     fak 2
->>>>>>> ab42709f4df6072790e18137ab13d9c9f0de7539
+
+    add my shit
 </body>
 </html>
